# remote-mcp

./: .env  .gitignore  CURSOR_RESTART_GUIDE.md  DEPLOYMENT_GUIDE.md  FINAL_SUCCESS_SUMMARY.md  LICENSE  NETWORK_OPTIMIZATION_PLAN.md  PROJECT_STRUCTURE.md  README.md  SUDO_TIMEOUT_FIX.md  SUDO_USAGE_GUIDE.md  bourbaki_setup.sh  bourbaki_tunnel_config.yaml  demo.py  enhanced_mcp_with_subdomains.json  env.example  ff_tunnel_config.yaml  final_demo.py  fix_cloudflare_service.sh  pyproject.toml  requirements.txt  setup_bourbaki_duckdns.sh  setup_bourbaki_duckdns_cron.sh  setup_network_tunnels.sh  setup_passwordless_sudo.sh  setup_ssh_tunnels.sh  simple_connection_test.py  simple_demo.py  ssh_config_fix.sh  start_mcp_server.py  test_connections.py  test_mcp_config.py  updated_mcp_config.json  working_demo.py
configs/: high-permissibility.yaml  permissibility-example.yaml
demos/: permissibility_demo.py  standalone_demo.py
docs/: CLOUDFLARE_DNS_SETUP.md  DUAL_MCP_SETUP.md  NETWORK_STATUS_SUMMARY.md  PASSWORD_MANAGEMENT.md  PERMISSIBILITY_IMPLEMENTATION.md  README.md
mcp_remote_ssh/: __init__.py  config.py  interactive_password_service.py  password_handler.py  security.py  security_patterns.py  server.py  server_broken.py  server_fixed.py  session.py  session_manager.py  tool_handlers.py
mcp_remote_ssh/examples/: host.json
mcp_remote_ssh/tests/: test_mcp_password.py  test_password_functionality.py  test_password_handler.py  test_permissibility.py  test_security.py  (+8 more)
node/: package.json  ssh-mcp.ts
scripts/: mcp_ssh_config.yaml  setup.sh  test_ssh_tunnels.sh
